Fix background images and videos on Safari

--- a/web/assets/css/haphpy.css
+++ b/web/assets/css/haphpy.css
@@ -355,6 +355,7 @@ ul.error-list {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
 }
 
 /** Contribution time is over **/
@@ -376,7 +377,8 @@ ul.error-list {
     width: auto;
     height: auto;
     z-index: -100;
-    transform: translateX(-50%) translateY(-50%);
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
     background: url(../images/audienc.jpg) no-repeat;
     background-size: cover;
 }
@@ -390,7 +392,8 @@ ul.error-list {
     width: auto;
     height: auto;
     z-index: -100;
-    transform: translateX(-50%) translateY(-50%);
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
     background:
         radial-gradient(circle, rgba(243,65,65,0.15), transparent 50%),
         linear-gradient(to bottom left, rgba(255,105,180,0.25), transparent, rgba(255,140,0,0.25)),
@@ -408,6 +411,8 @@ ul.error-list {
     color: black;
     background-color: rgba(255,255,255,0.5);
     padding: 0.15em;
+    margin-left: 0.2em;
+    margin-right: 0.2em;
     transition: background-color 0.5s;
     border-radius: 2px;
     font-size: 90%;
@@ -445,7 +450,7 @@ ul.error-list {
 }
 
 .user-group {
-    display: flex;
+    display: -webkit-flex;
     justify-content: space-between;
 }
 
@@ -462,6 +467,7 @@ ul.error-list {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
 }
 
 .user-group-data {
